--- a/isItPrime/Base.lproj/Main.storyboard
+++ b/isItPrime/Base.lproj/Main.storyboard
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="isItPrime" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +17,84 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="159" placeholderIntrinsicHeight="21" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fJs-s1-sAp">
+                                <rect key="frame" x="221" y="335" width="159" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Is it prime?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LZk-Ip-2Er">
+                                <rect key="frame" x="205" y="37" width="190" height="48"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                                <color key="textColor" red="0.72952178030303028" green="0.24878661966484308" blue="0.38518620275584137" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter a number" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G5f-y8-uNu">
+                                <rect key="frame" x="241" y="256" width="118" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="1" verticalHuggingPriority="1" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6fO-Hr-97i">
+                                <rect key="frame" x="20" y="285" width="560" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9GE-kd-AON">
+                                <rect key="frame" x="282" y="335" width="37" height="30"/>
+                                <state key="normal" title="Done"/>
+                                <connections>
+                                    <action selector="buttonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="K8i-Zw-aej"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YK1-vf-GMJ">
+                                <rect key="frame" x="20" y="373" width="560" height="99"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="99" id="kKx-dN-1il"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="6fO-Hr-97i" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="7gP-uD-LaR"/>
+                            <constraint firstItem="LZk-Ip-2Er" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Bk9-4O-hD1"/>
+                            <constraint firstItem="YK1-vf-GMJ" firstAttribute="top" secondItem="9GE-kd-AON" secondAttribute="bottom" constant="8" id="D42-Tf-KuS"/>
+                            <constraint firstItem="fJs-s1-sAp" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="FPa-IX-ngf"/>
+                            <constraint firstItem="6fO-Hr-97i" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="Ikf-MK-R4j"/>
+                            <constraint firstItem="fJs-s1-sAp" firstAttribute="top" secondItem="6fO-Hr-97i" secondAttribute="bottom" constant="20" id="Iwf-96-Kdr"/>
+                            <constraint firstItem="6fO-Hr-97i" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="Kzg-vd-OSC"/>
+                            <constraint firstItem="YK1-vf-GMJ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="NP4-6I-Wrd"/>
+                            <constraint firstItem="G5f-y8-uNu" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="XVu-YY-nG0"/>
+                            <constraint firstItem="fJs-s1-sAp" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="d5m-uY-vjn"/>
+                            <constraint firstItem="fJs-s1-sAp" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="eBp-Q4-ew9"/>
+                            <constraint firstItem="9GE-kd-AON" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="hbt-9l-IDl"/>
+                            <constraint firstItem="YK1-vf-GMJ" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="igl-k1-RIL"/>
+                            <constraint firstItem="9GE-kd-AON" firstAttribute="top" secondItem="6fO-Hr-97i" secondAttribute="bottom" constant="20" id="jlc-fZ-lsf"/>
+                            <constraint firstItem="6fO-Hr-97i" firstAttribute="top" secondItem="G5f-y8-uNu" secondAttribute="bottom" constant="8" id="p1S-k8-hvp"/>
+                            <constraint firstItem="LZk-Ip-2Er" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="17" id="rQn-Wd-VtU"/>
+                            <constraint firstItem="fJs-s1-sAp" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="tmg-RP-K4m"/>
+                            <constraint firstItem="YK1-vf-GMJ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="wW0-18-cav"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="FPa-IX-ngf"/>
+                                <exclude reference="d5m-uY-vjn"/>
+                                <exclude reference="eBp-Q4-ew9"/>
+                            </mask>
+                        </variation>
                     </view>
+                    <connections>
+                        <outlet property="resultsLabel" destination="YK1-vf-GMJ" id="eYn-ED-N9v"/>
+                        <outlet property="textField" destination="6fO-Hr-97i" id="BVw-DY-Ufr"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="245" y="265"/>
         </scene>
     </scenes>
 </document>
